--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "geojson": "^0.5.0",
-    "d3": "^7.9.0"
+    "d3": "^7.9.0",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
